ingress/ingress-pod-v1-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ingress-pod-v1-example
  labels:
    app: demoapp
    ver: v1
spec:
  containers:
  - name: demoapp-v1
    image: tuxotron/demoapp:v1
    ports:
    - containerPort: 8080
      name: http
