ingress/demoapp-service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service-v1
spec:
  type: NodePort
  selector:
    app: demoapp
    ver: v1
  ports:
  - targetPort: 8080
    port: 80
    protocol: TCP
