ingress/demoapp-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service-v2
spec:
  type: NodePort
  selector:
    app: demoapp
    ver: v2
  ports:
  - targetPort: 8080
    port: 80
    protocol: TCP
