ingress/demoapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /demoapp/v1
        backend:
          serviceName: demoapp-service-v1
          servicePort: 80
      - path: /demoapp/v2
        backend:
          serviceName: demoapp-service-v2
          servicePort: 80
